# IdeaPoke_CA

./: README.md  pyproject.toml
src/ideapoke_ca/: crew.py  main.py
src/ideapoke_ca/config/: agents.yaml  tasks.yaml
