[project]
name = "ideapoke_ca"
version = "0.1.0"
description = "ideapoke-ca using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ideapoke_ca = "ideapoke_ca.main:run"
run_crew = "ideapoke_ca.main:run"
train = "ideapoke_ca.main:train"
replay = "ideapoke_ca.main:replay"
test = "ideapoke_ca.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
